# wordle

./: .gitignore  README.md  package-lock.json  package.json  rollup.config.js
.devcontainer/: Dockerfile
docs/: ARCHITECTURE.md
public/: global.css  index.html
src/: App.svelte  Game.svelte  main.ts  utils.ts
src-tauri/: tauri.conf.json
src-wasm/: Cargo.toml  Cargo.toml.d.ts
src-wasm/src/: lib.rs  words.rs
src/apps/: App.svelte  Game.svelte  Scores.svelte
src/etc/: utils.ts
