[package]
name = "src-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type= ["cdylib"]

[dependencies]
getrandom = {version = "0.2.6", features = ["js"]}
lazy_static = "1.4.0"
rand = "0.8.5"
wasm-bindgen = "0.2.80"
